--- a/matchrun/app/src/main/AndroidManifest.xml
+++ b/matchrun/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ygh547.matchrun"
-    android:targetSandboxVersion="2">
+    android:targetSandboxVersion="1">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" > </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" > </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".kakao.GlobalApplication"
@@ -26,7 +28,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="$AIzaSyDGd2W4iKYdQUxxL8EzHBEPhB-vCEae5Lg"/>
+            android:value="${MAPS_API_KEY}"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
