--- a/matchrun/app/build.gradle
+++ b/matchrun/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-analytics:21.1.0'
     implementation 'com.google.firebase:firebase-firestore'
     // Add the dependencies for any other desired Firebase products
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
