--- a/matchrun/app/src/main/AndroidManifest.xml
+++ b/matchrun/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
         android:extractNativeLibs="true"
         tools:targetApi="31">
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}"/>
+<!--        <meta-data-->
+<!--            android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="${MAPS_API_KEY}"/>-->
 
         <meta-data
             android:name="com.google.android.gms.version"
